--- a/Interfaces/de.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/de.lproj/GeneralPreferencesView.strings
@@ -1,108 +1,83 @@
-
-/* Class = "NSMenuItem"; title = "alle 15 Minuten"; ObjectID = "1Ll-uG-QWh"; */
+/* Class = "NSMenuItem"; title = "Every 15 minutes"; ObjectID = "1Ll-uG-QWh"; */
 "1Ll-uG-QWh.title" = "alle 15 Minuten";
 
-/* Class = "NSButtonCell"; title = "Nach \"Nächster ungelesener Artikel\" Befehl"; ObjectID = "2oy-1i-QQP"; */
+/* Class = "NSButtonCell"; title = "After \"Next Unread\" command"; ObjectID = "2oy-1i-QQP"; */
 "2oy-1i-QQP.title" = "Nach \"Nächster ungelesener Artikel\" Befehl";
 
-/* Class = "NSMenuItem"; title = "(Path)"; ObjectID = "5Cq-8f-vbL"; */
-"5Cq-8f-vbL.title" = "(Path)";
-
-/* Class = "NSMenuItem"; title = "alle 30 Minuten"; ObjectID = "5VQ-jP-2rL"; */
+/* Class = "NSMenuItem"; title = "Every 30 minutes"; ObjectID = "5VQ-jP-2rL"; */
 "5VQ-jP-2rL.title" = "alle 30 Minuten";
 
-/* Class = "NSMenuItem"; title = "alle 2 Stunden"; ObjectID = "6wU-yO-cnV"; */
+/* Class = "NSMenuItem"; title = "Every 2 hours"; ObjectID = "6wU-yO-cnV"; */
 "6wU-yO-cnV.title" = "alle 2 Stunden";
 
-/* Class = "NSButtonCell"; title = "Zeige die Anzahl der ungelesen Artikel im Docksymbol"; ObjectID = "7e3-Hu-RB5"; */
+/* Class = "NSButtonCell"; title = "Show the unread count on the application icon"; ObjectID = "7e3-Hu-RB5"; */
 "7e3-Hu-RB5.title" = "Zeige die Anzahl der ungelesen Artikel im Docksymbol";
 
-/* Class = "NSTextFieldCell"; title = "Wenn neue ungelesene Artikel empfangen wurden:"; ObjectID = "BbI-0A-zEG"; */
+/* Class = "NSTextFieldCell"; title = "When new unread articles are retrieved:"; ObjectID = "BbI-0A-zEG"; */
 "BbI-0A-zEG.title" = "Wenn neue ungelesene Artikel empfangen wurden:";
 
-/* Class = "NSMenu"; title = "Andere Ansichten"; ObjectID = "DFg-c6-rCy"; */
-"DFg-c6-rCy.title" = "Andere Ansichten";
-
-/* Class = "NSMenuItem"; title = "Auswählen..."; ObjectID = "FiK-E7-RnG"; */
+/* Class = "NSMenuItem"; title = "Other…"; ObjectID = "FiK-E7-RnG"; */
 "FiK-E7-RnG.title" = "Auswählen...";
 
-/* Class = "NSMenuItem"; title = "Nichts"; ObjectID = "GAY-ra-eQY"; */
-"GAY-ra-eQY.title" = "Nichts";
-
-/* Class = "NSButtonCell"; title = "Beim Start nach neuer Vienna-Version suchen"; ObjectID = "GnT-xT-rAZ"; */
+/* Class = "NSButtonCell"; title = "Check for newer versions of Vienna on start up"; ObjectID = "GnT-xT-rAZ"; */
 "GnT-xT-rAZ.title" = "Beim Start nach neuer Vienna-Version suchen";
 
-/* Class = "NSMenuItem"; title = "nur manuell"; ObjectID = "H9Q-du-oax"; */
+/* Class = "NSMenuItem"; title = "Manually"; ObjectID = "H9Q-du-oax"; */
 "H9Q-du-oax.title" = "nur manuell";
 
-/* Class = "NSMenu"; title = "Andere Ansichten"; ObjectID = "HFO-4f-zYZ"; */
-"HFO-4f-zYZ.title" = "Andere Ansichten";
-
-/* Class = "NSMenuItem"; title = "alle 6 Stunden"; ObjectID = "IMa-1h-lIO"; */
+/* Class = "NSMenuItem"; title = "Every 6 hours"; ObjectID = "IMa-1h-lIO"; */
 "IMa-1h-lIO.title" = "alle 6 Stunden";
 
-/* Class = "NSButtonCell"; title = "Nach kurzer Zeit"; ObjectID = "JDV-ek-xja"; */
+/* Class = "NSButtonCell"; title = "After a short delay"; ObjectID = "JDV-ek-xja"; */
 "JDV-ek-xja.title" = "Nach kurzer Zeit";
 
-/* Class = "NSButtonCell"; title = "In der Menüleiste zeigen"; ObjectID = "JN6-lj-bQ1"; */
+/* Class = "NSButtonCell"; title = "Show in menu bar"; ObjectID = "JN6-lj-bQ1"; */
 "JN6-lj-bQ1.title" = "In der Menüleiste zeigen";
 
-/* Class = "NSMenu"; title = "Andere Ansichten"; ObjectID = "Klv-JA-PvP"; */
-"Klv-JA-PvP.title" = "Andere Ansichten";
-
-/* Class = "NSButtonCell"; title = "Radio"; ObjectID = "NAE-EF-SsE"; */
-"NAE-EF-SsE.title" = "Radio";
-
-/* Class = "NSButtonCell"; title = "Suche nach Betaversionen"; ObjectID = "OID-qF-Pp0"; */
+/* Class = "NSButtonCell"; title = "Search for latest Beta versions"; ObjectID = "OID-qF-Pp0"; */
 "OID-qF-Pp0.title" = "Suche nach Betaversionen";
 
-/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "XAi-oh-7Fq"; */
-"XAi-oh-7Fq.title" = "OtherViews";
-
-/* Class = "NSButtonCell"; title = "Öffne Links im externen Browser"; ObjectID = "YoM-Gv-hXn"; */
+/* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "YoM-Gv-hXn"; */
 "YoM-Gv-hXn.title" = "Öffne Links im externen Browser";
 
-/* Class = "NSTextFieldCell"; title = "Neue Artikel abrufen:"; ObjectID = "ewU-JH-fMC"; */
+/* Class = "NSTextFieldCell"; title = "Check for new articles:"; ObjectID = "ewU-JH-fMC"; */
 "ewU-JH-fMC.title" = "Neue Artikel abrufen:";
 
-/* Class = "NSMenuItem"; title = "(Do not localise)"; ObjectID = "fYn-Rz-G69"; */
-"fYn-Rz-G69.title" = "(Do not localise)";
-
-/* Class = "NSTextFieldCell"; title = "Sichere geladene Dateien in:"; ObjectID = "geD-Ws-mQm"; */
+/* Class = "NSTextFieldCell"; title = "Save downloaded files to:"; ObjectID = "geD-Ws-mQm"; */
 "geD-Ws-mQm.title" = "Sichere geladene Dateien in:";
 
-/* Class = "NSButtonCell"; title = "Docksymbol animieren"; ObjectID = "gi4-ao-0yS"; */
+/* Class = "NSButtonCell"; title = "Bounce the application icon"; ObjectID = "gi4-ao-0yS"; */
 "gi4-ao-0yS.title" = "Docksymbol animieren";
 
-/* Class = "NSMenuItem"; title = "alle 3 Stunden"; ObjectID = "gnX-dW-XUD"; */
+/* Class = "NSMenuItem"; title = "Every 3 hours"; ObjectID = "gnX-dW-XUD"; */
 "gnX-dW-XUD.title" = "alle 3 Stunden";
 
-/* Class = "NSTextFieldCell"; title = "Bewege Artikel in den Papierkorb:"; ObjectID = "k6Y-ib-PGb"; */
+/* Class = "NSTextFieldCell"; title = "Move articles to Trash:"; ObjectID = "k6Y-ib-PGb"; */
 "k6Y-ib-PGb.title" = "Bewege Artikel in den Papierkorb:";
 
-/* Class = "NSTextFieldCell"; title = "Standard RSS Reader:"; ObjectID = "kGA-Sa-RLG"; */
+/* Class = "NSTextFieldCell"; title = "Default RSS Reader:"; ObjectID = "kGA-Sa-RLG"; */
 "kGA-Sa-RLG.title" = "Standard RSS Reader:";
 
-/* Class = "NSButtonCell"; title = "Markiere aktualisierte Artikel als Neu"; ObjectID = "meo-78-YOl"; */
+/* Class = "NSButtonCell"; title = "Mark updated articles as new"; ObjectID = "meo-78-YOl"; */
 "meo-78-YOl.title" = "Markiere aktualisierte Artikel als Neu";
 
-/* Class = "NSMenuItem"; title = "alle 5 Minuten"; ObjectID = "oVW-ee-uJT"; */
+/* Class = "NSMenuItem"; title = "Every 5 minutes"; ObjectID = "oVW-ee-uJT"; */
 "oVW-ee-uJT.title" = "alle 5 Minuten";
 
-/* Class = "NSButtonCell"; title = "Neue Artikel beim Programmstart abrufen"; ObjectID = "pXX-MI-tJX"; */
+/* Class = "NSButtonCell"; title = "Check for new articles on start up"; ObjectID = "pXX-MI-tJX"; */
 "pXX-MI-tJX.title" = "Neue Artikel beim Programmstart abrufen";
 
-/* Class = "NSButtonCell"; title = "Öffne Links im Hintergrund"; ObjectID = "pjg-Ze-H3l"; */
+/* Class = "NSButtonCell"; title = "Open new links in the background"; ObjectID = "pjg-Ze-H3l"; */
 "pjg-Ze-H3l.title" = "Öffne Links im Hintergrund";
 
 /* Class = "NSTextFieldCell"; title = "Updates:"; ObjectID = "qeb-at-hYb"; */
 "qeb-at-hYb.title" = "Updates:";
 
-/* Class = "NSButtonCell"; title = "Anonymisierten Systembericht senden"; ObjectID = "qno-Cg-EkC"; */
+/* Class = "NSButtonCell"; title = "Include anonymous system profile"; ObjectID = "qno-Cg-EkC"; */
 "qno-Cg-EkC.title" = "Anonymisierten Systembericht senden";
 
-/* Class = "NSTextFieldCell"; title = "Markiere aktuellen Artikel als gelesen:"; ObjectID = "sCl-hz-PFF"; */
+/* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "sCl-hz-PFF"; */
 "sCl-hz-PFF.title" = "Markiere aktuellen Artikel als gelesen:";
 
-/* Class = "NSMenuItem"; title = "jede Stunde"; ObjectID = "sSj-zI-6RY"; */
+/* Class = "NSMenuItem"; title = "Every hour"; ObjectID = "sSj-zI-6RY"; */
 "sSj-zI-6RY.title" = "jede Stunde";
